# audit-agents-system

./: .gitignore  MANIFEST.md  README.md  SECURITY.md  pyproject.toml
audit-agents/: .env.example  README.md  foundry.toml  pyproject.toml
audit-agents/prompts/: anchored.md  open.md
audit-agents/src/: daemon.py  disclosure.py  pipeline.py  telegram_bot.py
audit-agents/src/autoresearch/: artifact.py  loop.py  tools.py  validator.py
audit-agents/src/benchmark/: __init__.py
audit-agents/src/discovery/: rust_wrapper.py
audit-agents/src/price/: __init__.py
audit-agents/src/rag/: chunker.py
audit-agents/src/stages/: autoresearch.py  parallel_audit.py
audit-agents/tests/: __init__.py  conftest.py  test_autoresearch.py  test_benchmark.py  test_clean_export.py  test_config.py  test_db.py  test_decompile.py  test_disclosure.py  test_discovery.py  test_local_env.py  test_model_runner.py  test_models.py  test_pipeline.py  test_price.py  test_resolve.py  test_secret_scan.py  test_triage.py
docs/: app.js  benchmark-corpus.json  benchmark-corpus.md  data.js  diagrams.js  index.html  model-matrix.md  oss-stack-matrix.md  particles.js  pi-dev-loop-contract.md  research-decisions.md  styles.css
scripts/: create_clean_export.py  scan_secrets.py
snapshot-extractor/: Cargo.toml
snapshot-extractor/src/: main.rs
src/: __init__.py  config.py  constants.py  db.py  local_env.py  logger.py  models.py
src/autoresearch/: __init__.py  memory.py  model_runner.py  models.py  report.py  verification.py
src/benchmark/: models.py  runner.py  scoring.py
src/cli/: main.py
src/discovery/: __init__.py  light_mode.py  orchestrator.py
src/price/: cache.py  defillama.py
src/rag/: db.py  embeddings.py  parser.py  search.py
src/stages/: decompile.py  report.py  resolve.py  triage.py  verify.py
