[project]
name = "audit-agents"
version = "0.1.0"
description = "Autonomous smart contract security audit system"
requires-python = ">=3.12"
dependencies = [
    "web3>=7.5.0",
    "eth-abi>=5.0.0",
    "evmole>=0.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "lancedb>=0.17.0",
    "httpx>=0.28.0",
    "curl_cffi>=0.7.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "voyageai>=0.3.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "python-telegram-bot>=21.0",
    "aiolimiter>=1.1.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[project.scripts]
audit = "src.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["audits", "data"]
