[package]
name = "snapshot-extractor"
version = "0.1.0"
edition = "2021"
description = "Extract high-balance contracts from Erigon/Geth node"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "snapshot-extractor"
path = "src/main.rs"
